bug 764009 add tidylib for cleaner html diffs

--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule "src/basket-client"]
 	path = src/basket-client
 	url = git://github.com/mozilla/basket-client.git
+[submodule "src/pytidylib"]
+	path = src/pytidylib
+	url = git://github.com/countergram/pytidylib.git
