bug 775147 - statsd libraries

--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,9 @@
 [submodule "src/pytidylib"]
 	path = src/pytidylib
 	url = git://github.com/countergram/pytidylib.git
+[submodule "src/django-statsd"]
+	path = src/django-statsd
+	url = git://github.com/andymckay/django-statsd.git
+[submodule "src/pystatsd"]
+	path = src/pystatsd
+	url = git://github.com/jsocol/pystatsd.git
