--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule "src/pystatsd"]
 	path = src/pystatsd
 	url = git://github.com/jsocol/pystatsd.git
+[submodule "src/django-arecibo"]
+	path = src/django-arecibo
+	url = git://github.com/andymckay/django-arecibo.git
